<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_primary"
    tools:context=".AfterLoginActivity">

    <LinearLayout
        android:id="@+id/activation_wrap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_box"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/insert_activation_code_text"
                android:textAlignment="center"
                android:textSize="21sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/activate_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:inputType="numberDecimal"
                android:hint="@string/activate_code_hint"
                android:gravity="center"
                android:maxLength="6"
                android:background="@drawable/login_input"/>

            <Button
                android:id="@+id/activation_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="17sp"
                android:height="45dp"
                android:background="@drawable/button_1"
                android:textColor="@color/colorWhite"
                android:text="@string/konfirmasi_kode"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:text="@string/activation_help_text"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/change_password_wrap"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:padding="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_box"
            android:orientation="vertical"
            android:padding="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password"
                android:textAlignment="center"
                android:textSize="21sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:hint="@string/new_password"
                android:gravity="center"
                android:inputType="textPassword"
                android:background="@drawable/login_input"/>

            <Button
                android:id="@+id/new_password_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="17sp"
                android:height="45dp"
                android:background="@drawable/button_1"
                android:textColor="@color/colorWhite"
                android:text="@string/save"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:text="@string/save_password_hint"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>