<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/desc_wrap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/background_primary"
            android:gravity="center"
            android:paddingTop="45dp"
            android:paddingHorizontal="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="21sp"/>
            <TextView
                android:id="@+id/dashboard_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_subtitle"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/scan_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_hint"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="21sp"
                android:layout_marginTop="10dp"/>
            <ImageView
                android:id="@+id/dashboard_img"
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/qrcode"
                android:contentDescription="@string/login_subtitle"/>

            <Button
                android:id="@+id/btn_scan"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:text="@string/scan_btn"
                android:textSize="21sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button_circle"/>
            <Button
                android:id="@+id/btn_exit"
                android:visibility="gone"
                android:layout_width="155dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:text="@string/done"
                android:textSize="21sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button_1"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/user_name_wrap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:text="@string/dashboard_welcome"
                android:textAlignment="center"
                android:textSize="17sp"/>
            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:textSize="21sp"
                android:textAlignment="center"
                android:text="Nama User"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/desc_wrap"
            android:textColor="@color/colorWhite"
            android:textAlignment="center"
            android:textSize="13sp"
            android:layout_marginBottom="15dp"
            android:text="@string/copyright"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>