<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/progress_wrap"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/net_process"
            android:layout_width="55dp"
            android:layout_height="55dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/app_loading"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noserver_wrap"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center"
        android:visibility="gone"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/no_server_title"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/no_server_subtitle"
            android:textSize="19sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <EditText
            android:id="@+id/server_addr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/change_server_address"
            android:drawableStart="@drawable/ic_computer"
            android:drawablePadding="10dp"
            android:inputType="text"
            android:visibility="gone"
            android:textColor="@color/colorBlueDark"
            android:background="@drawable/login_input"/>
        <Button
            android:id="@+id/server_addr_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:height="45dp"
            android:background="@drawable/button_1"
            android:textColor="@color/colorWhite"
            android:text="@string/try_connect"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>