<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_primary"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="30dp"
        android:gravity="center"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textSize="27sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/login_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_subtitle"
            android:textAlignment="center"
            android:textSize="21sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"/>

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:padding="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="-50dp"
            android:elevation="1000dp"
            android:background="@drawable/login_logo">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/icon_user"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_box"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingTop="30dp"
            android:paddingBottom="15dp"
            android:elevation="2dp">

            <EditText
                android:id="@+id/username"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_username"
                android:background="@drawable/login_input"
                android:drawableStart="@drawable/ic_username"
                android:drawablePadding="5dp"
                android:inputType="text"
                android:nextFocusDown="@id/password"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/password"
                android:layout_below="@id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password"
                android:background="@drawable/login_input"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="5dp"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:nextFocusForward="@id/btn_login"
                android:padding="10dp"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_below="@id/password"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_1"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                android:textSize="17sp"
                android:textAllCaps="false"
                android:text="@string/btn_login_text"/>

            <TextView
                android:layout_below="@id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:text="@string/login_help"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/copyright"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_alignParentBottom="true"
                android:textColor="@color/colorWhite"/>

        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>